--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.0.2",
     "sass": "^1.44.0"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
